--- a/banTrangsuc/css/style.css
+++ b/banTrangsuc/css/style.css
@@ -1,1 +1,199 @@
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Spartan", sans-serif;
+}
 
+html {
+  scroll-behavior: smooth;
+}
+
+/* Global Styles */
+
+h1 {
+  font-size: 50px;
+  line-height: 64px;
+  color: #222;
+}
+
+h2 {
+  font-size: 46px;
+  line-height: 54px;
+  color: #222;
+}
+
+h4 {
+  font-size: 20px;
+  color: #222;
+}
+
+h6 {
+  font-weight: 700;
+  font-size: 12px;
+}
+
+p {
+  font-size: 16px;
+  color: #222;
+  margin: 15px 0 20px 0;
+}
+
+.section-p1 {
+  padding: 45px 80px;
+}
+
+.section-m1 {
+  margin: 40px 0;
+}
+
+body {
+  width: 100%;
+}
+
+#header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 80px;
+  background: #F5F5F5;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
+}
+
+#header img{
+    width: 55px;
+}
+
+#menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#menu li {
+    list-style: none;
+    padding: 0 20px;
+    position: relative;
+}
+
+#menu li a {
+    text-decoration: none;
+    color: #696969;
+    font-size: 16px;
+    font-weight: 600;
+    transition: 0.3s ease;
+}
+
+#menu li a:hover,
+#menu li a.danhdau {
+    color: #00B2EE;
+}
+
+#menu li a.danhdau::after,
+#menu li a:hover::after {
+    content: "";
+    display: block;
+    width: 30%;
+    height: 2px;
+    background: #00B2EE;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
+}
+
+#banner {
+  background: url(../images/sabrianna-Eulnh2kzUR01-unsplash.jpg);
+  background-position: top 35% right 0;
+  background-size: cover;
+  height: 90vh ;
+  width: 100%;
+  padding: 0 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+#banner h1{
+    color: #6CA6CD;
+    
+}
+
+#banner h2{
+    color: #9C9C9C;
+}
+
+#banner h4{
+    padding-bottom: 15px;
+    color: #9C9C9C;
+}
+
+#banner p{
+   color:  #4F4F4F;
+}
+
+#banner a{
+    text-decoration: none;
+    color: #363636;
+}
+
+#banner button{
+    padding: 12px 30px;
+    background: #9C9C9C;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: 0.5s ease;
+    font-weight: 700;
+    font-size: 15px;
+}
+#banner button:hover{
+    background: #00B2EE;
+}
+
+#fearture{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+
+#fearture .box{
+    width: 184px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    border: 2px solid  #F5F5F5;
+    border-radius: 4px;
+    margin: 15px 0;
+}
+
+
+#fearture .box:hover{
+    box-shadow: 10px 10px 54px rgba(0 ,178 ,238, 0.2);
+}
+
+
+#fearture .box img{
+    width: 100%;
+    margin-bottom: 10px;
+}
+#fearture .box h6{
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px ;
+    color:#363636 ;
+}
+
+#fearture .box p{
+    color: #9C9C9C;
+    font-size: 10px;
+    margin: 9px 0;
+}
