--- a/banTrangsuc/css/style.css
+++ b/banTrangsuc/css/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 #header img{
-    width: 55px;
+    width: 46px;
 }
 
 #menu {
@@ -77,7 +77,7 @@ body {
 
 #menu li {
     list-style: none;
-    padding: 0 20px;
+    padding: 0px 20px;
     position: relative;
 }
 
@@ -87,6 +87,7 @@ body {
     font-size: 16px;
     font-weight: 600;
     transition: 0.3s ease;
+    display: block;
 }
 
 #menu li a:hover,
@@ -105,7 +106,13 @@ body {
     bottom: -4px;
     left: 20px;
 }
-
+#close{
+  display: none;
+}
+#mobile{
+  display: none;
+  align-items: center;
+}
 #banner {
   background: url(../images/sabrianna-Eulnh2kzUR01-unsplash.jpg);
   background-position: top 35% right 0;
@@ -125,12 +132,12 @@ body {
 }
 
 #banner h2{
-    color: #9C9C9C;
+    color: #4F4F4F;
 }
 
 #banner h4{
     padding-bottom: 15px;
-    color: #9C9C9C;
+    color: #4F4F4F;
 }
 
 #banner p{
@@ -168,8 +175,6 @@ body {
     width: 184px;
     text-align: center;
     padding: 25px 15px;
-    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
-    border: 2px solid  #F5F5F5;
     border-radius: 4px;
     margin: 15px 0;
 }
@@ -179,11 +184,33 @@ body {
     box-shadow: 10px 10px 54px rgba(0 ,178 ,238, 0.2);
 }
 
-
-#fearture .box img{
+#fearture .boxx img{
     width: 100%;
-    margin-bottom: 10px;
+    padding: 0 45px;
 }
+
+#fearture .boxxx{
+  width: 184px;
+
+  padding: 25px 15px;
+  border-radius: 4px;
+  margin: 15px 0;
+}
+
+#fearture .boxxx img{
+  width: 100%;
+  margin-bottom: 10px;
+  border-radius: 4px;
+}
+
+#fearture .boxxx img:hover{
+  box-shadow: 10px 10px 54px rgba(0 ,178 ,238, 0.2);
+    transform: scale(1.1);
+    
+  
+}
+
+
 #fearture .box h6{
     display: inline-block;
     padding: 9px 8px 6px 8px;
@@ -197,3 +224,461 @@ body {
     font-size: 10px;
     margin: 9px 0;
 }
+
+#fearture .box i{
+    font-size: 30px;
+    font-weight: 700;
+    margin: 10px 0;
+}
+
+#product1{
+  text-align: center;
+}
+
+#product1 .pro{
+  width: 23%;
+  min-width: 250px;
+  padding: 10px 12px;
+  border:  1px solid  #E8E8E8;
+  cursor: pointer;
+  border-radius: 15px;
+  margin: 15px 0;
+  transition: 0.2s ease;
+  position: relative;
+}
+
+#product1 .container{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px ;  
+  flex-wrap: wrap;
+}
+
+#product1 .pro:hover{
+  box-shadow: 20px 20px 30px rgb(0 ,178 ,238,0.06);
+}
+
+#product1 .pro img{
+  width: 100%;
+  border-radius: 7.5px;
+}
+
+#product1 .pro .des{
+  text-align: start;
+  padding: 10px 0;
+}
+
+#product1 .pro .des span{
+  color: #9C9C9C;
+  font-size: 12px;
+}
+
+#product1 .pro .des h5{
+  padding-top: 7px;
+  color: #363636;
+  font-size: 18px;
+}
+
+#product1 .pro .des i{
+  font-size: 12px;
+  color: rgb(238 201 0);
+}
+
+#product1 .pro .des h4{
+  padding-top: 7px;
+  font-size: 15px;
+  font-weight: 700;
+  color: #363636;
+}
+
+#product1 .pro .crat{
+  color: #9C9C9C;
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  transition: 0.5s ease;
+}
+
+#product1 .pro .crat:hover{
+  color: #00B2EE;
+}
+
+.contain {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  max-width: 1000px;
+  margin: auto;
+}
+.contain .item {
+  font-weight: 500;
+  border-radius: 8px;
+  overflow: hidden;
+  text-align: center;
+  padding: 15px;
+}
+.contain .item img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+.contain .content {
+  padding: 15px;
+}
+.contain .content h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+.contain .content p {
+  font-size: 14px;
+  font-weight: 500;
+  color: #666;
+  margin-bottom: 10px;
+}
+.contain .btn {
+  display: inline-block;
+  padding: 12px 30px;
+  background-color: #9C9C9C;
+  color: #363636;
+  font-weight: 500;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 14px;
+}
+.contain .btn:hover {
+  background-color: #00B2EE;
+}
+
+.banne {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
+  padding: 40px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+.banne img {
+  width: 50%;
+  border-radius: 10px;
+}
+.banner-content {
+  width: 45%;
+}
+.banne h2 {
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+.banne p {
+  font-size: 16px;
+  font-weight: 500;
+  color: #555;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+.banne button {
+  padding: 10px 20px;
+  border: 1px solid black;
+  background: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.banne button:hover {
+  background: black;
+  color: white;
+}
+
+
+.footer {
+  background-color: #1a1a1a;
+  color: white;
+  padding: 40px 80px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.footer-column {
+  flex: 1;
+  min-width: 200px;
+  margin-bottom: 20px;
+}
+.footer-column h3 {
+  margin-bottom: 15px;
+  font-size: 18px;
+}
+
+.footer-column p {
+  font-weight: 500;
+  font-size: 14px;
+  color: white;
+}
+.footer-column ul {
+  list-style: none;
+}
+.footer-column ul li {
+  margin-bottom: 8px;
+}
+.footer-column a {
+  font-weight: 500;
+  color: white;
+  text-decoration: none;
+}
+.footer-column a:hover {
+  text-decoration: underline;
+}
+.subscribe {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+.subscribe input {
+  padding: 10px;
+  width: 200px;
+  border: none;
+  border-radius: 5px;
+}
+.subscribe button {
+  padding: 10px 15px;
+  border: none;
+  background-color: #333;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.footer-bottom {
+  text-align: center;
+  font-weight: 500;
+ margin: 20px 20px;
+  font-size: 14px;
+}
+
+@media (max-width:799px){
+  .section-p1{
+    padding: 40px 40px;
+  }
+
+  #menu{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      position: fixed;
+      top: 0; right: -300px; height: 100vh; width: 300px;
+      background-color: #F5F5F5;
+      box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+      padding: 80px 0 0 10px  ;
+      transition: 0.3s;
+  }
+
+  #menu.active{
+      right: 0;
+  }
+
+  #menu li{
+      margin-top: 25px;
+  }
+  #mobile{
+    display: flex;
+    align-items: center;
+  }
+  #mobile i{
+    font-size: 24px;
+    color: #696969;
+    padding-left: 20px;
+  }
+
+  #close{
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #696969;
+    font-size: 24px;
+  }
+  #lg-bag{
+    display: none;
+  }
+  #banner{
+    height: 70vh;
+    padding: 0 80px;
+    background-position: top 40% right 30%;
+  }
+  #fearture{
+    justify-content: center;
+  }
+  #fearture .box{
+    margin: 15px 15px;
+  }
+
+  #fearture .boxx{
+    margin: 15px;
+  }
+  
+  #fearture .boxxx{
+    margin: 15px;
+  }
+
+  #product1 .container{
+    justify-content: center;
+  }
+  #product1 .pro{
+    margin: 15px ;
+  }
+  .banne {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: white;
+    padding: 40px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+.banne img {
+    width: 50%;
+    border-radius: 10px;
+}
+.banner-content {
+    width: 45%;
+}
+.banne h2 {
+    font-size: 28px;
+    margin-bottom: 15px;
+}
+.banne p {
+    font-size: 16px;
+    font-weight: 500;
+    color: #555;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+.banne button {
+    padding: 10px 20px;
+    border: 1px solid black;
+    background: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.banne button:hover {
+    background: black;
+    color: white;
+}
+.contain {
+  grid-template-columns: 1fr;
+  gap: 15px;
+  max-width: 100;
+}
+.contain .content h3 {
+  font-size: 18px;
+}
+.contain .content p {
+  font-size: 14px;
+}
+.contain .btn {
+  padding: 10px 25px;
+  font-size: 14px;
+}
+
+.footer {
+  flex-direction: column;
+  align-items: left;
+  text-align: left;
+}
+.subscribe {
+  flex-direction: column;
+  align-items: left;
+}
+.subscribe input {
+  width: 100%;
+}
+}
+
+@media (max-width: 477px) {
+  .section-p1 {
+    padding: 20px ;
+  }
+  #header {
+    padding: 10px 30px;
+  }
+  h1{
+    font-size: 38px;
+  }
+  h2 {
+    font-size: 32px;
+  }
+  #banner {
+    padding: 0 20px;
+    background-position: 55%;
+  }
+
+  #fearture {
+       justify-content: space-between;
+  }
+
+  #fearture .box{
+    width: 155px;
+    margin: 0 0 15px 0;
+  }
+  #fearture .boxx{
+    width: 155px;
+    margin: 0 0 15px 0;
+  }
+
+
+  
+  #fearture .boxxx{
+    align-items: center;
+    width: 140px;
+    padding: 0 20px;
+    margin: 0 0 15px 0;
+
+  }
+  .banne {
+    flex-direction: column;
+    text-align: center;
+    padding: 20px;
+}
+.banne img {
+    width: 100%;
+}
+.banner-content {
+    width: 100%;
+    padding: 15px;
+}
+.banne h2 {
+    font-size: 24px;
+}
+.banne p {
+    font-size: 14px;
+}
+.contain {
+  
+  padding: 10px;
+}
+.contain .item {
+  padding: 15px;
+}
+.contain .content h3 {
+  font-size: 16px;
+}
+.contain .content p {
+  font-size: 13px;
+}
+.contain .btn {
+  padding: 8px 20px;
+  font-size: 13px;
+}
+
+.footer {
+  padding: 20px;
+}
+.footer-column {
+  min-width: 100%;
+  text-align: left;
+}
+}
+
+
